@@ -1,4 +1,5 @@
 2006-11-25  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadGedcom.py: handle _UID for FAM structure (#0000505)
 	* src/docgen/ODFDoc.py: don't query mime type for ODT, since some systems
 	return only "ODT Document", which is kind of useless. Use OpenDocument Text
 	instead.
